fix: Add multi-stage Dockerfile

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,5 +1,4 @@
-# Use the official Golang image as the base image
-FROM golang:1.24.1
+FROM golang:1.24.1 AS builder
 
 # Set the Current Working Directory inside the container
 WORKDIR /app
@@ -7,14 +6,27 @@ WORKDIR /app
 # Copy go mod and sum files
 COPY go.mod go.sum ./
 
-# Download all dependencies. Dependencies will be cached if the go.mod and go.sum are not changed
-RUN go mod tidy
+# Download all dependencies
+RUN go mod download
 
-# Copy the entire project into the container
+# Copy the source code into the container
 COPY . .
 
 # Build the Go app
 RUN go build -o main .
 
-# Command to run the executable
+# Start a new stage from a minimal base image (Alpine)
+FROM alpine:latest
+
+# Install libc6 compatibility (for Alpine)
+RUN apk add --no-cache libc6-compat
+
+WORKDIR /app
+
+# Copy the compiled binary and required files
+COPY --from=builder /app/main .
+COPY --from=builder /app/.env .
+
+# Run the executable
+RUN chmod +x /app/main
 CMD ["./main"]
