--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,10 @@
 HTTP_HOST=
 HTTP_PORT=
+HTTP_MODE=
+POSTGRES_HOST=
+POSTGRES_PORT=
+POSTGRES_USERNAME=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
+POSTGRES_MAX_CONNS=
+POSTGRES_MIN_CONNS=
