--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,7 @@ POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
 POSTGRES_MAX_CONNS=
 POSTGRES_MIN_CONNS=
+REDIS_HOST=
+REDIS_PORT=
+REDIS_DATABASE=
+REDIS_TTL=
